# ETL_Project

./: .env  .gitignore  Dockerfile  Dockerfile.bronze  Dockerfile.gold  Dockerfile.silver  README.md  docker-compose.yaml  ingestion_ethnicity_data.py  main.py  pyproject.toml  run_all.sh  run_bronze.sh  run_gold.sh  run_silver.sh
Bronze_Stagging/: Bronze_stagging.ipynb  ingestion_ethnicity_data.ipynb
Bronze_Stagging_Notebooks/: ingestion_cities_data.ipynb  ingestion_ethnicity_data.ipynb  ingestion_shootings_data.ipynb
Bronze_Stagging_Python_Scripts/: ingestion_cities_data.py  ingestion_ethnicity_data.py  ingestion_shootings_data.py
Gold_Stagging_Notebooks/: dim_circumstance.ipynb  dim_date.ipynb  dim_location.ipynb  dim_month.ipynb  dim_state.ipynb  dim_victim.ipynb  dim_weapon.ipynb  fact_fatal_shooting.ipynb  fact_state_month_metrics.ipynb
Gold_Stagging_Python_Scripts/: dim_circumstance.py  dim_date.py  dim_location.py  dim_month.py  dim_state.py  dim_victim.py  dim_weapon.py  fact_fatal_shootings.py  fact_state_month_metrics.py
Silver_Stagging_Notebooks/: silver_shooting_enriched.ipynb  silver_shooting_reference.ipynb  silver_state_city_reference.ipynb  silver_state_ethnicity_reference.ipynb
Silver_Stagging_Python_Scripts/: silver_shooting_enriched.py  silver_shooting_reference.py  silver_state_city_reference.py  silver_state_ethnicity_reference.py
datasets/: Ethnicity_Data_Usa.xlsx
